--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -107,13 +107,12 @@ body {
 }
 
 .input {
-	margin: 10px 0;
+	margin-bottom: 10px;
 }
 
 .form-group {
 	width: 80%;
 	margin: 0 auto;
-	text-align: center;
 }
 
 .links {
@@ -156,6 +155,7 @@ body {
 
 .hid {
 	left: -100%;
+	display: none;
 }
 
 .center {
@@ -169,6 +169,7 @@ body {
 	display: block;
 	position: absolute;
 	top: 0;
+	opacity: 1;
 }
 
 .placeholder {
@@ -221,6 +222,11 @@ body {
 	text-align: center;
 	font-size: 2em;
 	text-decoration: underline;
+}
+
+label {
+	text-align: left;
+	margin-bottom: 2px;
 }
 
 #linkedin {
