--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -75,7 +75,7 @@ body {
 }
 
 .icon {
-	font-size: 1.3em;
+	font-size: 1.1em;
 	padding: 10px;
 	opacity: 0;
 }
@@ -86,6 +86,8 @@ body {
 
 .about {
 	padding: 0 0 15px 0;
+	width: 85%;
+	margin: 0 auto;
 }
 
 .portfolio {
@@ -94,10 +96,6 @@ body {
 	background-color: #DEDEDE;
 	z-index: 1;
 	overflow-x: hidden;
-}
-
-.portfolioContainer {
-	height: 100%;
 }
 
 .contact {
@@ -251,6 +249,10 @@ label {
 	color: #333;
 }
 
+.contact {
+	width: 85%;
+	margin: 0 auto;
+}
 
 .foot {
   color: #333;
