--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,7 @@ html {
 body {
 	background-color: #E8E8E8;
   height: 100%;
-	font-family: 'Barlow Semi Condensed', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 14px;
 	overflow-y: auto;
 	overflow-x: hidden;
@@ -14,7 +14,7 @@ body {
 
 
 .main-window {
-	background-image: url(/images/waterBackground.jpg);
+	background-image: url("https://www.jarrodyellets.com/images/sidewalkBack.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: left center;
@@ -22,31 +22,7 @@ body {
 	margin: 20px;
 	display: block;
 	overflow: hidden;
-}
-
-.banner {
-	margin: 100px 20px 0 0;
-	padding-right: 10px;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-	color: #DEDEDE;
-}
-
-.name {
-	font-size: 7em;
-	margin-bottom: 0;
-	display: none;
-}
-
-.menu {
-	font-weight: 400;
-	text-transform: uppercase;
-	font-size: 1.3em;
-	letter-spacing: 10px;
-	cursor: pointer;
-	display: none;
-	color: #DEDEDE;
+	padding: 0;
 }
 
 .menu:hover {
@@ -261,75 +237,58 @@ label {
   text-align: center;
 }
 
+.nav-bar {
+	position: relative;
+	z-index: 20;
+	height: 50px;
+	max-height: 50px;
+	width: 100%;
+	padding: 0 5%;
+	background: rgba(0, 0, 0, .5);
+	display: flex;
+	align-items: center;
+}
 
-.navcon {
-	margin-right: 0;
-	margin-left: 0;
+.linksWrapper {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	width: 100%;
 }
 
-#navLinks {
-	margin-top: 10px;
-	display: none;
+.navIcons {
+	display: flex;
+	font-size: 1.3em;
 }
 
-.navbar {
-	color: #F6F6F6;
-	background-color: rgba(0, 0, 0, 0);
-	min-height: 0;
-}
-
-.navbar-default {
-	border: none;
-}
-
-.navbar-collapse {
-	padding-right: 0;
-}
-
-.navbar-default .navbar-nav>li>a {
+.menu {
+	margin: 0 1.5vw;
 	color: #DEDEDE;
-	font-weight: 400;
+}
+
+.navLinks {
+	display: flex;
+}
+
+.links {
+	text-decoration: none;
+	color: #DEDEDE;
+	font-size: 1.1em;
+	font-weight: 600;
 	text-transform: uppercase;
-	letter-spacing: 5px;
-	margin: 0 30px;
-	font-size: 30px;
+	margin: 0 1.5vw;
 }
 
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: #DEDEDE;
+.hamburger {
+	display: none;
+	text-decoration: none;
+	color: #DEDEDE;
+	padding-left: 30px;
+	font-size: 20px;
 }
 
-.navbar-default .navbar-toggle .icon-bar {
-	border-radius: 0;
-	background-color: #DEDEDE;
-}
-
-
-.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-	background-color: rgba(0, 0, 0, 0);
-}
-
-.navbar .navbar-collapse {
-	text-align: center;
-	overflow-x: hidden;
-}
-
-.navbar-default .navbar-collapse, .navbar-default .navbar-form {
-	border-color: #DEDEDE;
-}
-
-.nav>li {
-	z-index: 1;
-}
-
-.container-fluid>.navbar-collapse, .container-fluid>.navbar-header, .container>.navbar-collapse, .container>.navbar-header {
-	margin-right: -45px;
-}
-
-.navbar-default .navbar-toggle {
-  border: none;
-  margin-right: -50px;
+.closeBtn {
+	display: none;
 }
 
 @-webkit-keyframes hvr-pop {
@@ -378,14 +337,44 @@ label {
 		height: 100%;
 	}
 
+	.navLinks {
+		height: 100%;
+		width: 200px;
+		position: fixed;
+		z-index: 5;
+		top: 0;
+		right: -200px;
+		display: flex;
+		flex-direction: column;
+		background: #faf9f5;
+		overflow-x: hidden;
+		padding-top: 60px;
+		padding-left: 10px;
+		box-sizing: border-box;
+		-webkit-transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1);
+  	-moz-transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1);
+  	-o-transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1);
+  	transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1);
+	}
 
-	.banner {
-		align-items: center;
-		text-align: center;
-		justify-content: center;;
-		margin-right: 0;
-		margin-top: auto;
-		padding-right: 0;
+	.width {
+		right: 0;
+	}
+
+	.links {
+		display: inline-block;
+		padding: 10px 0;
+	}
+
+	.hamburger {
+		display: block;
+	}
+
+	.closeBtn {
+		position: absolute;
+		display: block;
+		top: 15px;
+		right: 25px;
 	}
 
 	.name {
@@ -395,11 +384,6 @@ label {
 	.icon {
 		font-size: .8em;
 		padding: 3px;
-	}
-
-  .container-fluid>.navbar-collapse, .container-fluid>.navbar-header, .container>.navbar-collapse, .container>.navbar-header {
-		margin-right: 0;
-		margin-left: 0;
 	}
 
 	.portTitle {
