--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,7 +6,7 @@ body {
 	background-color: #e8e8e8;
 	color: #272727;
   height: 100%;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 	font-size: 14px;
 	overflow-y: auto;
 	overflow-x: hidden;
@@ -258,6 +258,7 @@ label {
 	background: rgba(0, 0, 0, .5);
 	display: flex;
 	align-items: center;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .linksWrapper {
