--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,10 +3,10 @@ html {
 }
 
 body {
-	background-color: #e8e8e8;
-	color: #272727;
+	background-color: #e9e9e9;
+	color: #5f5e5b;
   height: 100%;
-	font-family: 'Ubuntu', sans-serif;
+	font-family: 'Cabin', sans-serif;
 	font-size: 14px;
 	overflow-y: auto;
 	overflow-x: hidden;
@@ -44,10 +44,25 @@ body {
 }
 
 .title {
+	position: relative;
 	text-align: center;
 	margin: 20px 0;
+	font-size: 1.2em;
+	letter-spacing: .1em;
 	font-weight: 700;
-	font-size: 2em;
+	text-transform: uppercase;
+}
+
+.title:before {
+	position: absolute;
+	content: "";
+	background: #b7b6b1;
+	height: 2px;
+	width: 20px;
+	left: 0;
+	right: 0;
+	bottom: -10px;
+	margin: 0 auto;
 }
 
 .frontEnd, .backEnd {
@@ -80,9 +95,9 @@ body {
 .portfolio {
 	position: relative;
 	padding: 0 0 15px 0;
-	background-color: #DEDEDE;
+	background-color: #dedede;
 	z-index: 1;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .contact {
@@ -112,13 +127,15 @@ body {
 
 .button {
 	background: #E8E8E8;
-	border: 1px solid #333;
+	border: 1px solid #b7b6b1;
 	border-radius: 1px;
 	outline: none;
-	font-size: 1em;
+	font-size: .8em;
+	font-weight: 600;
+	text-transform: uppercase;
 	padding: 5px 10px;
 	margin: 0 5px;
-	color: #333;
+	color: #5f5e5b;
 }
 
 .button:hover, .button:focus {
@@ -188,6 +205,9 @@ body {
 
 .portTitle {
 	margin-top: 0;
+	font-size: 1em;
+	text-transform: uppercase;
+	font-weight: 700;
 }
 
 .portContainer {
@@ -202,10 +222,15 @@ body {
 	display: none;
 }
 
-
 .heading {
 	text-align: center;
-	font-size: 1.5em;
+	font-size: 1.1em;
+	text-transform: uppercase;
+	font-weight: 700;
+}
+
+.built {
+	font-size: 1em;
 	font-weight: 700;
 }
 
@@ -429,8 +454,12 @@ label {
 		text-align: center;
 	}
 
+	.title {
+		font-size: 1.2em;
+	}
+
 	.portTitle {
-		font-size: 24px;
+		font-size: 1.2em;
 	}
 
 	.portfolioText {
@@ -439,8 +468,8 @@ label {
 
 	.button {
 		font-size: 1.1em;
-		padding: 2px;
-		margin: 0 3px;
+		padding: 6px;
+		margin: 0 2px;
 	}
 
 	.top {
