--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -46,8 +46,8 @@ body {
 .title {
   position: relative;
   text-align: center;
-  margin: 20px 0;
-  font-size: 1.2em;
+  margin: 20px 0 50px 0;
+  font-size: 1.3em;
   letter-spacing: .1em;
   font-weight: 700;
   text-transform: uppercase;
@@ -63,6 +63,10 @@ body {
   right: 0;
   bottom: -10px;
   margin: 0 auto;
+}
+
+#aboutTitle {
+  margin-top: 0;
 }
 
 .frontEnd, .backEnd {
@@ -456,6 +460,10 @@ label {
 
   .title {
     font-size: 1.2em;
+  }
+
+  #aboutTitle {
+    margin-top: 20px;
   }
 
   .portTitle {
