--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,11 +3,11 @@ html {
 }
 
 body {
-  background-color: #e9e9e9;
-  color: #5f5e5b;
+  background-color: #e3e3e9;
+  color: rgba(22, 21, 19, .7);
   height: 100%;
-  font-family: 'Cabin', sans-serif;
-  font-size: 14px;
+  font-family: 'Reenie Beanie', cursive;
+  font-size: 30px;
   overflow-y: auto;
   overflow-x: hidden;
   position: relative;
@@ -43,63 +43,66 @@ body {
   animation: rollover 700ms;
 }
 
-.title {
-  position: relative;
+.about {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.titleImg {
+  margin: 0 auto;
   text-align: center;
-  margin: 20px 0 50px 0;
-  font-size: 1.3em;
-  letter-spacing: .1em;
-  font-weight: 700;
-  text-transform: uppercase;
+  display: block;
 }
 
-.title:before {
-  position: absolute;
-  content: "";
-  background: #b7b6b1;
-  height: 2px;
-  width: 20px;
-  left: 0;
-  right: 0;
-  bottom: -10px;
-  margin: 0 auto;
-}
-
-#aboutTitle {
-  margin-top: 0;
-}
-
-.frontEnd, .backEnd {
+.aboutWrapper {
   display: flex;
-  justify-content: center;
-  font-size: 70px;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 
-.aboutRow {
-  margin: 0 auto;
-  padding: 0 30px 30px 30px;
+.subHeader {
+  font-size: 2.4em;
+  color: rgba(248, 22, 33, .7);
 }
 
-.icon {
-  font-size: 1.1em;
-  padding: 10px;
-  opacity: 0;
+.stack {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 50%;
+}
+
+.tools {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.toolsLeft {
+  margin-right: 100px;
+}
+
+.me {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 50%;
+}
+
+.stackText {
+  font-size: 2.2em;
+  color: rgba(16, 97, 202, 1);
 }
 
 .text {
   font-size: 1.2em;
 }
 
-.about {
-  padding: 0 0 15px 0;
-  width: 85%;
-  margin: 0 auto;
-}
-
 .portfolio {
   position: relative;
   padding: 0 0 15px 0;
-  background-color: #dedede;
   z-index: 1;
   overflow: hidden;
 }
@@ -281,6 +284,7 @@ label {
   position: relative;
   z-index: 20;
   height: 50px;
+  font-size: 0.467em;
   max-height: 50px;
   width: 100%;
   padding: 0 5%;
