--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,10 +1,18 @@
+:root {
+  --black: rgba(22, 21, 19, .7);
+  --red: rgba(248, 22, 33, .7);
+  --blue: rgba(16, 97, 202, 1);
+  --green: rgba(1, 145, 94, 1);
+  --purple: rgba(130, 4, 104, .7);
+}
+
 html {
   height: 100%;
 }
 
 body {
   background-color: #e3e3e9;
-  color: rgba(22, 21, 19, .7);
+  color: var(--black);
   height: 100%;
   font-family: 'Reenie Beanie', cursive;
   font-size: 30px;
@@ -62,7 +70,7 @@ body {
 
 .subHeader {
   font-size: 2.4em;
-  color: rgba(248, 22, 33, .7);
+  color: var(--red);
 }
 
 .stack {
@@ -83,6 +91,11 @@ body {
   margin-right: 100px;
 }
 
+.stackText {
+  font-size: 2.2em;
+  color: var(--blue);
+}
+
 .me {
   display: flex;
   flex-direction: column;
@@ -91,20 +104,80 @@ body {
   width: 50%;
 }
 
-.stackText {
-  font-size: 2.2em;
-  color: rgba(16, 97, 202, 1);
-}
-
 .text {
   font-size: 1.2em;
 }
 
+p {
+  margin: 0;
+}
+
+.divider {
+  font-size: 2.5em;
+  text-align: center;
+  color: var(--green);
+  margin: 80px 0;
+}
+
 .portfolio {
-  position: relative;
-  padding: 0 0 15px 0;
-  z-index: 1;
-  overflow: hidden;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.portfolioGrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 90px;
+  margin-top: 80px;
+}
+
+.portfolioItem {
+  max-width: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.portfolioImg {
+  max-width: 350px;
+}
+
+.built {
+  color: var(--blue);
+  margin-top: 20px;
+}
+
+.builtWith {
+  color: var(--red);
+}
+
+.buttonWrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.btn {
+  background: rgba(0, 0, 0, 0);
+  outline: none;
+  font-size: 1.1em;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 5px 10px;
+  margin: 0 5px;
+  color: var(--purple);
+  transition: all 1s;
+}
+
+.btn:hover {
+  opacity: .4;
+  color: var(--purple);
+}
+
+.btn:focus {
+  color: var(--purple);
+  outline: none;
 }
 
 .contact {
@@ -130,24 +203,6 @@ body {
   margin: 0 30px;
   font-size: 18px;
   cursor: pointer;
-}
-
-.button {
-  background: #E8E8E8;
-  border: 1px solid #b7b6b1;
-  border-radius: 1px;
-  outline: none;
-  font-size: .8em;
-  font-weight: 600;
-  text-transform: uppercase;
-  padding: 5px 10px;
-  margin: 0 5px;
-  color: #5f5e5b;
-}
-
-.button:hover, .button:focus {
-  background-color: #333;
-  color: #E8E8E8;
 }
 
 .top {
@@ -339,6 +394,11 @@ label {
 
 .closeBtn {
   display: none;
+}
+
+@keyframes strike{
+  0%   { width : 0; }
+  100% { width: 100%; }
 }
 
 @keyframes rollover {
