--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -316,7 +316,7 @@ label {
   font-size: 1.5em;
   letter-spacing: 10px;
   cursor: pointer;
-  color: #333;
+  color: var(--black);
 }
 
 .menuContact:hover {
