--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -146,6 +146,8 @@ p {
 .built {
   color: var(--blue);
   margin-top: 20px;
+  font-size: 1.1em;
+  font-weight: 700;
 }
 
 .builtWith {
@@ -181,18 +183,26 @@ p {
 }
 
 .contact {
-  position: relative;
-  padding: 0 0 15px 0;
-  height: auto;
+  max-width: 1200px;
+  margin: 0 auto 100px auto;
 }
 
-.input {
-  margin-bottom: 10px;
+.contactWrapper {
+  text-align: center;
 }
 
-.form-group {
-  width: 80%;
-  margin: 0 auto;
+.contactIcons {
+  margin-bottom: 50px;
+}
+
+.contactEmail {
+  color: var(--black);
+  font-size: 2em;
+}
+
+.contactEmail:hover {
+  text-decoration: none;
+  color: var(--black);
 }
 
 .links {
@@ -213,101 +223,8 @@ p {
   margin-bottom: 10px;
 }
 
-.computer {
-  height: 100%;
-}
-
-.hid {
-  left: -100%;
-  display: none;
-}
-
-.center {
-  left: 0;
-  right: 0;
-}
-
-.screen {
-  width: 90%;
-  margin: 0 auto;
-  display: block;
-  position: absolute;
-  top: 0;
-  opacity: 1;
-}
-
-.placeholder {
-  position: relative;
-  opacity: 0;
-  width: 90%;
-  display: block;
-  margin: 0 auto;
-}
-
-
-.portfolioText {
-  position: relative;
-  height: 100%;
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-#filler {
-  display: block;
-  position: relative;
-}
-
-.portAbout {
-  width: 80%;
-  text-align: center;
-  position: absolute;
-  top: 0;
-  padding-left: 20%;
-}
-
-.portTitle {
-  margin-top: 0;
-  font-size: 1.1em;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-
-.portContainer {
-  position: relative;
-}
-
-.hidRight {
-  right: -150%;
-}
-
-.noDisplay {
-  display: none;
-}
-
-.heading {
-  text-align: center;
-  font-size: 1.1em;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-
-.built {
-  font-size: 1.1em;
-  font-weight: 700;
-}
-
-label {
-  text-align: left;
-  margin-bottom: 2px;
-}
-
 #linkedin {
   padding-right: 0;
-}
-
-.buttonDiv {
-  text-align: center;
-  padding: 5px;
 }
 
 .menuContact {
@@ -323,15 +240,9 @@ label {
   color: #333;
 }
 
-.contact {
-  width: 85%;
-  margin: 0 auto;
-}
-
 .foot {
   color: #333;
   height: 100%;
-  font-family: Raleway;
   text-align: center;
 }
 
