--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -33,6 +33,7 @@ body {
   display: block;
   overflow: hidden;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .menu:hover {
@@ -185,6 +186,7 @@ p {
 .contact {
   max-width: 1200px;
   margin: 0 auto 100px auto;
+  position: relative;
 }
 
 .contactWrapper {
@@ -193,6 +195,7 @@ p {
 
 .contactText {
   font-size: 1.7em;
+  color: var(--red);
 }
 
 .contactIcons {
@@ -205,13 +208,20 @@ p {
 }
 
 .contactEmail {
-  color: var(--black);
+  color: var(--blue);
   font-size: 2em;
 }
 
 .contactEmail:hover {
   text-decoration: none;
-  color: var(--black);
+  color: var(--blue);
+}
+
+.arrow {
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+  cursor: pointer;
 }
 
 .links {
