--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,8 +1,8 @@
 :root {
   --black: rgba(22, 21, 19, .7);
   --red: rgba(248, 22, 33, .7);
-  --blue: rgba(16, 97, 202, 1);
-  --green: rgba(1, 145, 94, 1);
+  --blue: rgba(16, 97, 202, .7);
+  --green: rgba(1, 145, 94, .7);
   --purple: rgba(130, 4, 104, .7);
 }
 
@@ -155,6 +155,7 @@ p {
 
 .builtWith {
   color: var(--red);
+  font-weight: 700;
 }
 
 .buttonWrapper {
