--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -324,6 +324,7 @@ p {
   position: relative;
   overflow: hidden;
 }
+
 .hvr-underline-from-left:before {
   content: "";
   position: absolute;
@@ -332,11 +333,12 @@ p {
   right: 100%;
   top: 50%;
   opacity: 0;
+  transform: rotate(-3deg);
   background: var(--purple);
   height: 4px;
   border-radius: 40%;
-  transition: opacity .15s, right .6s;
-  -webkit-transition: opacity .15s, right .6;
+  transition: opacity .15s, right .3s;
+  -webkit-transition: opacity .15s, right .3;
 }
 
 .hvr-underline-from-left:hover:before {
