--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -329,14 +329,13 @@ p {
 .hvr-underline-from-left:before {
   content: "";
   position: absolute;
-  z-index: -1;
+  z-index: 1;
   left: 0;
   right: 100%;
-  top: 50%;
+  top: 55%;
   opacity: 0;
-  transform: rotate(-3deg);
-  background: var(--purple);
-  height: 4px;
+  background: var(--red);
+  height: 3px;
   border-radius: 40%;
   transition: opacity .15s, right .3s;
   -webkit-transition: opacity .15s, right .3;
