--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -339,17 +339,17 @@ p {
   z-index: 1;
   left: 0;
   right: 100%;
-  top: 55%;
+  top: 50%;
   opacity: 0;
   background: var(--red);
   height: 3px;
   border-radius: 40%;
-  transition: opacity .15s, right .3s;
-  -webkit-transition: opacity .15s, right .3;
+  transition: opacity .15s, right .25s;
+  -webkit-transition: opacity .15s, right .25s;
 }
 
 .hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
-  right: 0;
+  right: 0%;
   opacity: 1;
   outline: none !important;
 }
@@ -397,7 +397,7 @@ p {
   animation-timing-function: linear;
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
-} 
+}
 
 @media screen and (max-width: 1100px){
   .portfolioGrid {
@@ -528,7 +528,7 @@ p {
   .contact {
     padding: 0 20px;
   }
-  
+
   .contactImage {
     margin: 0 10px;
     width: 40px;
@@ -556,7 +556,3 @@ p {
 }
 
 }
-
-
-
-
