--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -297,10 +297,14 @@ p {
   margin: 0 1.5vw;
   letter-spacing: 5px;
   cursor: pointer;
+  padding: 0 5px;
+  border-radius: 5px;
+  transition: all .3s;
 }
 
 .links:hover {
-  color: #DEDEDE;
+  color: rgba(0 ,0 , 0, 0,5);
+  background: #DEDEDE;
   text-decoration: none;
 }
 
