--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -346,13 +346,13 @@ p {
   content: "";
   position: absolute;
   z-index: 1;
-  left: 0;
+  left: 10px;
   right: 100%;
   bottom: 10px;
   opacity: 0;
   background: var(--purple);
   height: 3px;
-  border-radius: 40%;
+  border-radius: 30%;
   transition: opacity .15s, right .25s;
   -webkit-transition: opacity .15s, right .25s;
 }
@@ -367,13 +367,13 @@ p {
   opacity: 0;
   background: var(--purple);
   height: 3px;
-  border-radius: 40%;
+  border-radius: 30%;
   transition: opacity .15s, right .25s;
   -webkit-transition: opacity .15s, right .25s;
 }
 
 .hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
-  right: 0%;
+  right: 10px;
   opacity: 1;
   outline: none !important;
 }
