--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -761,6 +761,10 @@ p {
     height: 2px;
   }
 
+  .stack-hash:before {
+    height: 2px;
+  }
+
 @media screen and (max-width: 700px) {
   .portfolioGrid {
     grid-template-columns: repeat(1, 1fr)
