--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -133,18 +133,35 @@ body {
   z-index: 1;
   left: 5px;
   right: 100%;
-  bottom: 20px;
+  bottom: 15px;
   opacity: 1;
   background: var(--red);
   height: 3px;
-  border-radius: 40%;
+  border-radius: 35%;
   transform: rotate(1deg);
   transform-origin: top left;
   transition: right .5s;
   -webkit-transition: right .5s;
 }
 
-.underlineWho.right:before {
+.underlineWhat:before {
+  position: absolute;
+  content: "";
+  z-index: 1;
+  left: 2px;
+  right: 100%;
+  bottom: 17px;
+  opacity: 1;
+  background: var(--red);
+  height: 3px;
+  border-radius: 35%;
+  transform: rotate(-1deg);
+  transform-origin: top left;
+  transition: right .5s;
+  -webkit-transition: right .5s;
+}
+
+.underlineWho.right:before, .underlineWhat.right:before {
   right: 5px;
 }
 
