--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -807,6 +807,10 @@ p {
     height: 2px;
   }
 
+  .underlineWho:before, .underlineWhat:before {
+    height: 2px;
+  }
+
 @media screen and (max-width: 700px) {
   .portfolioGrid {
     grid-template-columns: repeat(1, 1fr)
