--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -279,8 +279,23 @@ p {
   padding: 0 20px;
 }
 
+.imgWrapper {
+  position: relative;
+}
+
 .portfolioImg {
   max-width: 350px;
+}
+
+.pImg {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 5;
+  transition: all 3000ms ease-in-out;
 }
 
 .built {
