Adjusted tools mobile x

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -876,8 +876,9 @@ p {
     left: -8px;
   }
 
-  .stack-hash.width:before {
-    width: 6px;
+  .stack-hash.width:before, .stack-hash.widthx:after {
+    width: 10px;
+    height: 2px;
   }
 
   .toolHeader {
