--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -955,8 +955,9 @@ p {
     font-size: 1.8em;
   }
 
-  .arrow {
+  .arrowWrapper {
     position: relative;
+    width: 100px;
     margin: 50px auto 0 auto;
     display: block;
     text-align: center;
