--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -832,6 +832,12 @@ p {
 
   .nav-bar {
     font-size: .5em;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    background: rgba(0, 0, 0, .7);
   }
 
   .navLinks {
@@ -905,6 +911,10 @@ p {
 
   .hamburger {
     display: block;
+  }
+
+  .sticky {
+    animation: none;
   }
 
   .closeBtn {
