--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -497,7 +497,7 @@ p {
   right: 0;
   margin: 0 auto;
   background: rgba(0, 0, 0, .7);
-  animation: sticky 1s;
+  animation: bounce .5s ease-in-out;
 }
 
 .linksWrapper {
@@ -735,12 +735,24 @@ p {
   transition-delay: .25s;
 }
 
-@keyframes sticky {
+@keyframes bounce {
   0% {
-    width: calc(100% - 40px);
+    transform: translateY(-50px);
   }
-  100% {
-    width: 100%;
+  50% {
+    transform: translateY(0);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
+  70% {
+    transform: translateY(0);
+  }
+  85% {
+    transform: translateY(-6px);
+  }
+  95% {
+    transform: translateY(0);
   }
 }
 
