--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -942,6 +942,10 @@ p {
     animation: none;
   }
 
+  .navFade {
+    animation: none;
+  }
+
   .closeBtn {
     position: absolute;
     display: block;
