--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -545,6 +545,15 @@ p {
   text-decoration: none;
 }
 
+.navIcons a:focus {
+  color: #DEDEDE;
+}
+
+.fab:focus {
+  color: #DEDEDE;
+  outline: none;
+}
+
 #home:hover {
   transform: rotate(-4deg);
   -webkit-box-shadow: 0px 3px 5px 3px rgba(0,0,0,0.75);
@@ -876,15 +885,15 @@ p {
     width: 170px;
     position: fixed;
     z-index: 5;
-    top: 0;
+    top: 50px;
     right: -170px;
     display: flex;
     flex-direction: column;
-    background: #353535;
+    background: rgba(0, 0 , 0, .7);
     color: #DEDEDE;
     font-size: 1.2em;
     overflow-x: hidden;
-    padding-top: 60px;
+    padding-top: 10px;
     padding-left: 10px;
     box-sizing: border-box;
     -webkit-transition: all 400ms cubic-bezier(0.42, 0, 0.58, 1);
@@ -931,6 +940,14 @@ p {
 
   .hamburger {
     display: block;
+  }
+
+  .mobileToggle {
+    transition: all .5s;
+  }
+  
+  .mobileToggle:hover {
+    color: #DEDEDE;
   }
 
   .sticky {
