--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -997,6 +997,10 @@ p {
     height: 2px;
   }
 
+  .stackText {
+    font-size: 1.2em;
+  }
+
   .toolHeader {
     font-size: 1em;
   }
@@ -1076,10 +1080,9 @@ p {
   }
 }
 
-@media screen and (max-width: 665px){
+@media screen and (max-width: 320px){
   .stackText {
-    font-size: .8em;
-    text-transform: uppercase;
+    font-size: .9em;
   }
 }
 
