--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -55,6 +55,8 @@ body {
 .about {
   max-width: 1200px;
   margin: 0 auto;
+  margin-top: 80px;
+  padding-top: 50px;
 }
 
 .titleImg {
@@ -63,10 +65,6 @@ body {
   display: block;
 }
 
-.about {
-  margin-top: 80px;
-  padding-top: 50px;
-}
 
 .aboutWrapper {
   display: flex;
@@ -998,10 +996,9 @@ p {
     height: 2px;
   }
 
-  /* .stackText {
-    font-size: 1.2em;
-  } */
-
+  .divider {
+    margin: 40px 0;
+  }
 
   .tools {
     grid-template-columns: repeat(2, auto);
